# portfolio

./: README.md
.github/workflows/: cmake.yml
bank-book/portfolio/: CMakeLists.txt  main.cpp  main.go  makefile  portfolio
bank-book/portfolio/src/: app_state.cpp  content_view.cpp  content_view.hpp  main.cpp  portfolio.cpp  portfolio.hpp  portfolio_app.cpp  portfolio_app.hpp  projects_menu.cpp  projects_menu.hpp
bank-book/portfolio/src/app-state/: app-state.cpp  app-state.hpp
bank-book/portfolio/src/content/: content.cpp  content.hpp
bank-book/portfolio/src/projects/: projects.cpp
bank-book/website/starry-saturn/: package-lock.json  package.json
